# kvwrap

./: .gitignore  Cargo.toml  compose.yml.example  devenv.nix
crates/fjwrap/: Cargo.toml
crates/fjwrap-bin/: Cargo.toml
crates/fjwrap-bin/src/: main.rs
crates/fjwrap-client/: Cargo.toml
crates/fjwrap-client/src/: config.rs  lib.rs  remote.rs
crates/fjwrap-core/: Cargo.toml
crates/fjwrap-core/src/: error.rs  lib.rs  local.rs  traits.rs
crates/fjwrap-distributed/: Cargo.toml  build.rs
crates/fjwrap-distributed/src/: lib.rs  proto.rs  server.rs
crates/fjwrap-distributed/src/routing/: router.rs  traits.rs  types.rs
crates/fjwrap-distributed/src/server/: server.rs
crates/fjwrap-proto/: Cargo.toml  build.rs
crates/fjwrap-proto/proto/: fjwrap.proto
crates/fjwrap-proto/src/: lib.rs
crates/fjwrap/src/: lib.rs
crates/kvwrap-bin/src/: main.rs
crates/kvwrap-client/: Cargo.toml
crates/kvwrap-client/src/: remote.rs
crates/kvwrap-core/: Cargo.toml
crates/kvwrap-core/src/: lib.rs  traits.rs  watch.rs
crates/kvwrap-core/src/backend/: fjall.rs  sled.rs
crates/kvwrap-distributed/: Cargo.toml
crates/kvwrap-distributed/src/server/: server.rs
crates/kvwrap-proto/proto/: kv.proto
