[workspace]
resolver = "2"
members = [
    "crates/fjwrap",
    "crates/fjwrap-core",
    "crates/fjwrap-distributed",
    "crates/fjwrap-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RyeBread <info@rye.moe>"]
license = "MIT"
repository = "https://github.com/ryebreadgit/fjwrap"

[workspace.dependencies]
# Internal
fjwrap-core = { path = "crates/fjwrap-core" }
fjwrap-distributed = { path = "crates/fjwrap-distributed" }
fjwrap-client = { path = "crates/fjwrap-client" }

# External
fjall = "3"
tonic = "0.14"
openraft = {version = "0.9", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
prost = "0.14"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
async-compat = "0.2"

# Async runtime
smol = "2"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
async-channel = "2"
async-lock = "3"
async-net = "2"
futures-lite = "2"