[workspace]
resolver = "2"
members = [
    "crates/kvwrap",
    "crates/kvwrap-bin",
    "crates/kvwrap-core",
    "crates/kvwrap-distributed",
    "crates/kvwrap-client",
    "crates/kvwrap-proto"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RyeBread <info@rye.moe>"]
license = "MIT"
repository = "https://github.com/ryebreadgit/kvwrap"

[workspace.dependencies]
# Internal
kvwrap-core = { path = "crates/kvwrap-core" }
kvwrap-distributed = { path = "crates/kvwrap-distributed" }
kvwrap-client = { path = "crates/kvwrap-client" }

# External
fjall = "3"
sled = "0.34"
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
openraft = {version = "0.9", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
prost = "0.14"
thiserror = "2"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
fracturedjson = "0.1"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
macro_rules_attribute = "0.2"
async-channel = "2"
async-lock = "3"
async-net = "2"
async-compat = "0.2"
futures-lite = "2"
blocking = "1.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
