[package]
name = "fjwrap-bin"
version.workspace = true
edition.workspace = true
description = "Fjwrap binary runner"

[[bin]]
name = "fjwrap"
path = "src/main.rs"

[dependencies]
fjwrap-core = { path = "../fjwrap-core" }
fjwrap-distributed = { path = "../fjwrap-distributed" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }