[package]
name = "fjwrap-bin"
version.workspace = true
edition.workspace = true
description = "Fjwrap binary runner"

[[bin]]
name = "fjwrap"
path = "src/main.rs"

[dependencies]
fjwrap = { path = "../fjwrap", features = ["full"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }