[package]
name = "fjwrap-client"
version.workspace = true
edition.workspace = true
description = "Lightweight client for fjwrap clusters"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Smol ecosystem
smol = { workspace = true }
async-channel = { workspace = true }
async-net = { workspace = true }
futures-lite = { workspace = true }