[package]
name = "fjwrap-distributed"
version.workspace = true
edition.workspace = true
description = "Distributed capabilities for fjwrap"

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]
raft = []
sharding = []

[dependencies]
fjwrap-core = { path = "../fjwrap-core" }
fjwrap-proto = { path = "../fjwrap-proto" }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }