[package]
name = "fjwrap-distributed"
version.workspace = true
edition.workspace = true
description = "Distributed capabilities for fjwrap"

[dependencies]
fjwrap-core = { path = "../fjwrap-core" }
fjwrap-proto = { path = "../fjwrap-proto" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }