[package]
name = "fjwrap"
version.workspace = true
edition.workspace = true
description = "Flexible fjall wrapper with optional distributed capabilities"

[features]
default = []

# Convenience presets
distributed = ["dep:fjwrap-distributed"]
client = ["dep:fjwrap-client"]
full = ["distributed", "client"]

[dependencies]
fjwrap-core = { workspace = true }
fjwrap-distributed = { workspace = true, optional = true }
fjwrap-client = { workspace = true, optional = true }