[package]
name = "kvwrap-client"
version.workspace = true
edition.workspace = true
description = "Lightweight client for kvwrap clusters"

[dependencies]
kvwrap-core = { path = "../kvwrap-core" }
kvwrap-proto = { path = "../kvwrap-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
async-compat = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
futures-lite = { workspace = true }
async-channel = { workspace = true }
tracing = { workspace = true }