[package]
name = "kvwrap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
fjall = ["dep:fjall"]
sled = ["dep:sled"]

[dependencies]
fjall = { workspace = true, optional = true }
sled = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
blocking = { workspace = true }
base64 = { workspace = true }